added automate csv file

--- a/eda_on_usda_HPAI_wild_birds.ipynb
+++ b/eda_on_usda_HPAI_wild_birds.ipynb
@@ -50,16 +50,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Access the dataset at the url listed below:\n",
-    "[Detections of Highly Pathogenic Avian Influenza in Wild Birds](https://www.aphis.usda.gov/livestock-poultry-disease/avian/avian-influenza/hpai-detections/wild-birds)\n",
-    "- Scroll, click the csv button provided and download the csv."
+    "### Automated CSV Download\n",
+    "\n",
+    "The cell below retrieves the most recent `hpai-wild-birds.csv` file directly from the USDA server. The url was found using the browser's inspect element feature which provides the backend download link."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Automate download of USDA HPAI Wild Birds csv\n",
+    "\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "from io import StringIO\n",
+    "\n",
+    "# Found csv url using the browser's inspect element tool\n",
+    "\n",
+    "csv_url = \"https://www.aphis.usda.gov/sites/default/files/hpai-wild-birds.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV successfully loaded from USDA website\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -95,62 +119,62 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>West Virginia</td>\n",
-       "      <td>Monongalia</td>\n",
-       "      <td>2/18/2025</td>\n",
-       "      <td>2/27/2025</td>\n",
+       "      <td>South Carolina</td>\n",
+       "      <td>Colleton</td>\n",
+       "      <td>12/30/2021</td>\n",
+       "      <td>1/13/2022</td>\n",
        "      <td>EA H5N1</td>\n",
-       "      <td>Canada goose</td>\n",
+       "      <td>American wigeon</td>\n",
        "      <td>Wild bird</td>\n",
-       "      <td>Morbidity/Mortality</td>\n",
+       "      <td>Hunter harvest</td>\n",
        "      <td>NWDP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>West Virginia</td>\n",
-       "      <td>Monongalia</td>\n",
-       "      <td>2/18/2025</td>\n",
-       "      <td>2/27/2025</td>\n",
+       "      <td>South Carolina</td>\n",
+       "      <td>Colleton</td>\n",
+       "      <td>12/30/2021</td>\n",
+       "      <td>1/13/2022</td>\n",
        "      <td>EA H5N1</td>\n",
-       "      <td>Canada goose</td>\n",
+       "      <td>Blue-winged teal</td>\n",
        "      <td>Wild bird</td>\n",
-       "      <td>Morbidity/Mortality</td>\n",
+       "      <td>Hunter harvest</td>\n",
        "      <td>NWDP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Massachusetts</td>\n",
-       "      <td>Worcester</td>\n",
-       "      <td>2/18/2025</td>\n",
-       "      <td>2/27/2025</td>\n",
-       "      <td>EA H5</td>\n",
-       "      <td>Mallard</td>\n",
+       "      <td>North Carolina</td>\n",
+       "      <td>Hyde</td>\n",
+       "      <td>12/30/2021</td>\n",
+       "      <td>1/12/2022</td>\n",
+       "      <td>EA H5N1</td>\n",
+       "      <td>Northern shoveler</td>\n",
        "      <td>Wild bird</td>\n",
-       "      <td>Live bird</td>\n",
+       "      <td>Hunter harvest</td>\n",
        "      <td>NWDP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Texas</td>\n",
-       "      <td>Bexar</td>\n",
-       "      <td>2/13/2025</td>\n",
-       "      <td>2/27/2025</td>\n",
-       "      <td>EA H5</td>\n",
-       "      <td>Black vulture</td>\n",
+       "      <td>North Carolina</td>\n",
+       "      <td>Hyde</td>\n",
+       "      <td>1/8/2022</td>\n",
+       "      <td>1/20/2022</td>\n",
+       "      <td>EA H5N1</td>\n",
+       "      <td>American wigeon</td>\n",
        "      <td>Wild bird</td>\n",
-       "      <td>Morbidity/Mortality</td>\n",
+       "      <td>Hunter harvest</td>\n",
        "      <td>NWDP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Texas</td>\n",
-       "      <td>Bexar</td>\n",
-       "      <td>2/13/2025</td>\n",
-       "      <td>2/27/2025</td>\n",
+       "      <td>North Carolina</td>\n",
+       "      <td>Hyde</td>\n",
+       "      <td>1/8/2022</td>\n",
+       "      <td>1/20/2022</td>\n",
        "      <td>EA H5</td>\n",
-       "      <td>Black vulture</td>\n",
+       "      <td>Gadwall</td>\n",
        "      <td>Wild bird</td>\n",
-       "      <td>Morbidity/Mortality</td>\n",
+       "      <td>Hunter harvest</td>\n",
        "      <td>NWDP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -158,36 +182,34 @@
        "</div>"
       ],
       "text/plain": [
-       "           State      County Collection Date Date Detected HPAI Strain  \\\n",
-       "0  West Virginia  Monongalia       2/18/2025     2/27/2025     EA H5N1   \n",
-       "1  West Virginia  Monongalia       2/18/2025     2/27/2025     EA H5N1   \n",
-       "2  Massachusetts   Worcester       2/18/2025     2/27/2025       EA H5   \n",
-       "3          Texas       Bexar       2/13/2025     2/27/2025       EA H5   \n",
-       "4          Texas       Bexar       2/13/2025     2/27/2025       EA H5   \n",
+       "            State    County Collection Date Date Detected HPAI Strain  \\\n",
+       "0  South Carolina  Colleton      12/30/2021     1/13/2022     EA H5N1   \n",
+       "1  South Carolina  Colleton      12/30/2021     1/13/2022     EA H5N1   \n",
+       "2  North Carolina      Hyde      12/30/2021     1/12/2022     EA H5N1   \n",
+       "3  North Carolina      Hyde        1/8/2022     1/20/2022     EA H5N1   \n",
+       "4  North Carolina      Hyde        1/8/2022     1/20/2022       EA H5   \n",
        "\n",
-       "    Bird Species WOAH Classification      Sampling Method Submitting Agency  \n",
-       "0   Canada goose           Wild bird  Morbidity/Mortality              NWDP  \n",
-       "1   Canada goose           Wild bird  Morbidity/Mortality              NWDP  \n",
-       "2        Mallard           Wild bird            Live bird              NWDP  \n",
-       "3  Black vulture           Wild bird  Morbidity/Mortality              NWDP  \n",
-       "4  Black vulture           Wild bird  Morbidity/Mortality              NWDP  "
+       "        Bird Species WOAH Classification Sampling Method Submitting Agency  \n",
+       "0    American wigeon           Wild bird  Hunter harvest              NWDP  \n",
+       "1   Blue-winged teal           Wild bird  Hunter harvest              NWDP  \n",
+       "2  Northern shoveler           Wild bird  Hunter harvest              NWDP  \n",
+       "3    American wigeon           Wild bird  Hunter harvest              NWDP  \n",
+       "4            Gadwall           Wild bird  Hunter harvest              NWDP  "
       ]
      },
-     "execution_count": 58,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "## Load the Data\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Save csv as: usda_wild_bird_avian_influenza_detections.csv\n",
-    "flu_data = pd.read_csv('usda_wild_bird_avian_influenza_detections.csv')\n",
-    "\n",
-    "# Display first few rows of the dataset\n",
-    "flu_data.head()"
+    "try:\n",
+    "    download = requests.get(csv_url) # Asks website for file\n",
+    "    download.raise_for_status()  # Show error if download is not successful\n",
+    "    flu_data = pd.read_csv(StringIO(download.text)) # Load the CSV as a table\n",
+    "    print(\"CSV successfully loaded from USDA website\")\n",
+    "    display(flu_data.head())\n",
+    "except Exception as e: # Will catch problem if something goes wrong\n",
+    "    print(f\"Failed to load csv from url: {e}\")"
    ]
   },
   {
