comparing manual file to auto file

--- a/usda_hpai_csv_comparison.ipynb
+++ b/usda_hpai_csv_comparison.ipynb
@@ -240,6 +240,134 @@
     "else:\n",
     "    print(\"Comparison skipped due to failed online csv load.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>County</th>\n",
+       "      <th>Collection Date</th>\n",
+       "      <th>Date Detected</th>\n",
+       "      <th>HPAI Strain</th>\n",
+       "      <th>Bird Species</th>\n",
+       "      <th>WOAH Classification</th>\n",
+       "      <th>Sampling Method</th>\n",
+       "      <th>Submitting Agency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>South Carolina</td>\n",
+       "      <td>Colleton</td>\n",
+       "      <td>12/30/2021</td>\n",
+       "      <td>1/13/2022</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>American wigeon</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Hunter harvest</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>South Carolina</td>\n",
+       "      <td>Colleton</td>\n",
+       "      <td>12/30/2021</td>\n",
+       "      <td>1/13/2022</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Blue-winged teal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Hunter harvest</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>North Carolina</td>\n",
+       "      <td>Hyde</td>\n",
+       "      <td>12/30/2021</td>\n",
+       "      <td>1/12/2022</td>\n",
+       "      <td>EA H5N1</td>\n",
+       "      <td>Northern shoveler</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Hunter harvest</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>North Carolina</td>\n",
+       "      <td>Hyde</td>\n",
+       "      <td>1/8/2022</td>\n",
+       "      <td>1/20/2022</td>\n",
+       "      <td>EA H5N1</td>\n",
+       "      <td>American wigeon</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Hunter harvest</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>North Carolina</td>\n",
+       "      <td>Hyde</td>\n",
+       "      <td>1/8/2022</td>\n",
+       "      <td>1/20/2022</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Gadwall</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Hunter harvest</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            State    County Collection Date Date Detected HPAI Strain  \\\n",
+       "0  South Carolina  Colleton      12/30/2021     1/13/2022         NaN   \n",
+       "1  South Carolina  Colleton      12/30/2021     1/13/2022         NaN   \n",
+       "2  North Carolina      Hyde      12/30/2021     1/12/2022     EA H5N1   \n",
+       "3  North Carolina      Hyde        1/8/2022     1/20/2022     EA H5N1   \n",
+       "4  North Carolina      Hyde        1/8/2022     1/20/2022         NaN   \n",
+       "\n",
+       "        Bird Species WOAH Classification Sampling Method Submitting Agency  \n",
+       "0    American wigeon                 NaN  Hunter harvest               NaN  \n",
+       "1   Blue-winged teal                 NaN  Hunter harvest               NaN  \n",
+       "2  Northern shoveler                 NaN  Hunter harvest               NaN  \n",
+       "3    American wigeon                 NaN  Hunter harvest               NaN  \n",
+       "4            Gadwall                 NaN  Hunter harvest               NaN  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# See what rows are in the online file but not in the manual one\n",
+    "new_rows = csv_online[~csv_online.isin(csv_manual)].dropna(how='all')\n",
+    "display(new_rows.head())\n"
+   ]
   }
  ],
  "metadata": {
