updated file structure

--- a/eda_on_usda_HPAI_wild_birds.ipynb
+++ b/eda_on_usda_HPAI_wild_birds.ipynb
@@ -512,10 +512,10 @@
    ],
    "source": [
     "# File path to cleaned dataset\n",
-    "cleaned_file_path = \"cleaned_usda_hpai_wildbirds.csv\"  \n",
+    "cleaned_file_path = \"data/cleaned_usda_hpai_wildbirds.csv\"  \n",
     "\n",
     "# Save cleaned dataset as CSV for future use\n",
-    "flu_data.to_csv(cleaned_file_path, index=False)\n",
+    "flu_data.to_csv(data/cleaned_file_path, index=False)\n",
     "\n",
     "print(f\"Cleaned dataset saved as {cleaned_file_path}\")"
    ]
