--- a/eda_on_usda_HPAI_wild_birds.ipynb
+++ b/eda_on_usda_HPAI_wild_birds.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "### Automated Download\n",
     "\n",
-    "This section retrieves the latest USDA dataset directly using the URL found via browser inspection tools.\n",
+    "This notebook retrieves the latest USDA dataset directly using the URL found via browser inspection tools.\n",
     "\n",
     ">**One-Time Validation:** For quality assurance, the notebook includes an optional comparison between the automated and manually downloaded CSV files."
    ]
@@ -63,7 +63,7 @@
     "\n",
     "To manually download the dataset:\n",
     "1. Go to the [USDA Wild Birds HPAI page](https://www.aphis.usda.gov/livestock-poultry-disease/avian/avian-influenza/hpai-detections/wild-birds)\n",
-    "2. Scroll down and click the green CSV button.\n",
+    "2. Scroll down and click the blue CSV button.\n",
     "3. Save the file to `data/manual_usda_hpai_detections_wild_birds.csv` in this repo."
    ]
   },
